overflow fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  overflow: hidden;
 }
 .blue { 
 	color: #a0a7cb;
@@ -41,6 +42,19 @@ body {
 	background-color: #888ead;
 }
 .button-donate2 {
+	width: 180px;
+	text-align: center;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	background: #a0a7cb;
+	color: white;
+	border-radius: 5px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 40px;
+	font-size: 18px;
+}
+.button-donate3 {
 	width: 180px;
 	text-align: center;
 	padding-top: 10px;
@@ -245,7 +259,7 @@ h2 {
 }
 
 @media screen and (max-width: 767px){
-	.button-donate2 {
+	.button-donate3 {
 		margin-bottom: 50px;
 	}
 	#calculator {
